# TrackedRobotCtrl

./: README.md
joystick_ctrl/: CMakeLists.txt  package.xml  params.yaml
joystick_ctrl/launch/: run_itr.launch  rviz.launch
joystick_ctrl/src/: joy_ironctrl.cpp  joy_itrctrl.cpp  joy_node.cpp
pilz_industrial_motion_planner/: CMakeLists.txt  package.xml
pilz_industrial_motion_planner/include/pilz_industrial_motion_planner/: trajectory_generator_ptp.h
tracked_robot_control/: CMakeLists.txt  package.xml  urdf.rviz
tracked_robot_control/config/: controllers.yaml  joint_limits.yaml
tracked_robot_control/include/tracked_robot_control/: MiniPID.h  robot_control.h  robot_planning.h
tracked_robot_control/launch/: control.launch  display.launch  gazebo.launch
tracked_robot_control/meshes/: link0.STL  link1.STL  link2.STL  link3.STL  link4.STL
tracked_robot_control/src/: MiniPID.cpp  main.cpp  robot_control.cpp  robot_planning.cpp  teleop_twist_keyboard.py
tracked_robot_control/urdf/: gazebo.urdf  test.urdf  track_robot.csv  track_robot.urdf  track_robot_no_base.urdf
tracked_uart_comm/: CMakeLists.txt  package.xml
tracked_uart_comm/src/: main.cpp  uart_comm.cpp  uart_comm.h
